# openclaw-android

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTACION_TECNICA.md  DOCUMENTATION.es.md  DOCUMENTATION_TECHNICAL.md  GUIA_VERSIONADO.md  INSTALLATION_GUIDE.md  LICENSE  MIGRACION_PROOT_ALPINE_COMPLETA.md  PROMPT_MIGRAR_PROOT_CORTO.md  README.es.md  README.ko.md  README.md  README.zh.md  SECURITY.md  TESTING.md  TODO.md  analyze_payload.py  android-version-lock.md  bootstrap.sh  install-minimal.sh  install-tools.sh  install.sh  oa.sh  payload_contents.txt  post-setup.sh  rebuild_payload.py  settings.gradle.kts  skill.md  update-core.sh  update.sh  version.properties
.github/: dependabot.yml
android/: .gitignore  GUIA_ALINEACION_16KB.md  OPENCLAW_ANDROID_COMPLETE.md  OPENCLAW_ANDROID_MEMORIA.md  PROMPT_OPENCLAW_FIX.md  README.md  SKILL.md  build.gradle.kts  gradle.properties  readem-proceso.md  settings.gradle.kts  verify_alignment.ps1  version.properties
android/libtermux-build/: Android.mk  Application.mk  CMakeLists.txt  README.md  build.sh  build_libtermux.bat  build_windows.bat  extract_and_check_aars.ps1  simple_extract.ps1  verify.sh
docs/: CHANGELOG.md  disable-phantom-process-killer.ko.md  disable-phantom-process-killer.md  legacy-app-payload-compat.md  termux-ssh-guide.md  troubleshooting.md
patches/: glibc-compat.js
scripts/: add_npm_to_payload.py  backup.sh  build-rootfs.sh  check_npm_payload.py  docker-build-rootfs.sh  env-init.sh  export-from-termux.sh  install-infra-deps.sh  (+6 more)
(+401 files in other folders)
